--- a/package.json
+++ b/package.json
@@ -5,25 +5,29 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development",
-    "start": "webpack serve --mode development",
-    "build": "webpack --mode=production"
+    "start": "webpack serve --mode development --hot",
+    "build": "webpack --config webpack.config.js --mode=production"
   },
   "author": "Sokratis Valavanis",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^8.4.1",
     "node-sass": "^5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
+    "@babel/plugin-transform-runtime": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
+    "dotenv-webpack": "^7.0.2",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.5.0",
     "sass": "^1.32.11",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
