--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "dotenv-webpack": "^7.0.2",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.5.0",
     "sass": "^1.32.11",
